Update properties